# ConSci-v1.0

./: .gitattributes  CONTRIBUTING.md  README.md  accel_sdk.rar  soc_display_fpga_250.rar
berkeley-hardfloat/: README.md
chisel_prj-1.0/: .gitignore  .scalafmt.conf  build.sbt  check.sh  clear_comments.py
docs/: 流程手册.docx  软件开发手册.docx
models/: googlenet_int8.param  mobilenet_ssd_int8.param  mobilenet_yolo_int8.param  mobilenetv2_yolo_int8.param  resnet101_int8.param  resnet18_int8.param  resnet50_adult_int8.param  resnet50_int8.param  retinaface_int8.param  sd_file_test.txt  shufflenetv2_int8.param  squeezenet_int8.param  test.txt  yolo11n_int8.param  yolov3_int8.param  yolov3_tiny_int8.param  yolov3_tiny_int8_cq.param  yolov4_tiny_int8.param  yolov5s.ncnn_int8.param  yolov5s_int8.param  yolov6n_int8.param  yolov7_fire3_int8.param  yolov7_int8.param  yolov7_tiny_int8.param
simulation_prj-axi_sim/: .clang-format  .gitignore  Makefile  axi.gtkw  axi_w.gtkw  conv_buf.sav  debug.sav  dw_conv.gtkw  error_test.txt  gemm.sav  ifmbuf_acc.sav  ifmbufctl.sav  im2col_ifm32.sav  im2col_mat32.sav  mesh.gtkw  ofmbuf.sav  opfusion.sav  opfusion_ofmbuf.sav  right_test.txt  test_conv_qin.sav  wgtbuf.sav  wgtbuf_8bit.sav  wgtbuf_8bit_2.sav
simulation_prj-axi_sim/csrc/: config.h  top_sim.cpp  veri.cpp  veri.h
simulation_prj-axi_sim/models/: Makefile  readme.txt
simulation_prj-axi_sim/tools/: CMakeLists.txt  u_modelwriter.h  u_ncnn2int8.cpp  u_ncnnoptimize.cpp  u_opt_modelwriter.h  u_weightorder.cpp  u_weightorder.h
src/: config.h  lscript.ld  main.cpp
src/hw/: accel.h  (+15 more)
(+376 files in other folders)
